# AxData

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
docs/: README.md  api-design.md  (+19 more)
libs/axdata_core/: README.md  pyproject.toml
libs/axdata_core/axdata_core/: __init__.py  axp.py  builtin_providers.py  builtin_source_declarations.py  cli.py  collector_registry.py  collector_runner.py  collector_scheduler.py  collector_templates.py  data_browser.py  diagnostics.py  downloader_engine.py  downloader_registry.py  downloaders.py  legacy_provider_adapter.py  paths.py  plugin_config.py  plugin_status.py  plugins.py  provider_catalog.py  provider_registry.py  quality.py  query.py  sample_collectors.py  schema.py  source_adapter_factory.py  source_adapter_options.py  source_errors.py  source_execution_options.py  source_execution_registry.py  source_projection.py  source_request.py  source_session.py  storage.py  tdx_f10_catalog.py  tdx_f10_models.py  tdx_f10_names.py  tdx_f10_specs.py  tdx_plugin_required.py  tdx_server_config.py  (+1 more)
libs/axdata_core/axdata_core/_tdx_wire/: __init__.py  _shim.py  client.py  exceptions.py  hosts.py
libs/axdata_core/axdata_core/_tdx_wire/api/: __init__.py  auction.py  bars.py  base.py  codes.py  corporate.py  finance.py  intraday.py  quotes.py  resources.py  session.py  trades.py
libs/axdata_core/axdata_core/_tdx_wire/models/: __init__.py  auction.py  corporate.py  finance.py  intraday.py  kline.py  quote.py  resource.py  security.py  session.py  subchart.py  trade.py
libs/axdata_core/axdata_core/_tdx_wire/protocol/: __init__.py  constants.py  frame.py  unit.py
libs/axdata_core/axdata_core/_tdx_wire/transport/: __init__.py  base.py  memory.py  pool.py  socket.py
libs/axdata_core/axdata_core/adapters/cls/: __init__.py  provider_bridge.py  request.py  source_adapter_registry.py
libs/axdata_core/axdata_core/adapters/cninfo/: __init__.py  provider_bridge.py  request.py  source_adapter_registry.py
libs/axdata_core/axdata_core/resources/: __init__.py  tdx_extended_servers.json  tdx_quote_servers.json
libs/axdata_core/axdata_core/sources/: __init__.py  base.py  catalog.py  display_docs.py
(+255 files in other folders)
