[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "axdata-workspace"
version = "0.1.0"
description = "Local-first quantitative data platform workspace"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "lxml>=5.2.0",
  "pandas>=2.2.0",
  "packaging>=23",
  "pyarrow>=16.0.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "requests>=2.32.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: 连真实 TDX 服务器的集成测试"]
pythonpath = [
  ".",
  "libs/axdata_core/src",
  "libs/axdata_core",
  "packages/axdata-sdk/src",
  "packages/axdata-sdk",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools]
packages = []

